[data preprocessing] collected, cropped qualified images

--- a/training/jpg-converter.ipynb
+++ b/training/jpg-converter.ipynb
@@ -15,24 +15,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b8a35604-fbba-43fb-9cd7-b42b28b007ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
-    "input_dir =  os.path.abspath('./data/train/ginger/')\n",
+    "input_dir =  os.path.abspath('./data/train/pepper/')\n",
     "\n",
     "convert_path = r'C:\\Program Files\\ImageMagick-7.1.1-Q16-HDRI\\magick.exe'  # Adjust this path if necessary\n",
     "\n",
     "# Loop through all files in the directory\n",
     "for index, filename in enumerate(os.listdir(input_dir)):\n",
-    "    if filename.endswith(\".HEIC\"):  # Check if the file has a .heic extension\n",
+    "    if filename.endswith(\".HEIC\") or filename.endswith(\".JPG\") or filename.endswith(\".JPEG\") or filename.endswith(\".PNG\"):  # Check if the file has a .heic extension\n",
     "        heic_file_path = os.path.join(input_dir, filename)\n",
     "        output_file_path = os.path.join(input_dir, f\"{index}.jpg\")\n",
     "        \n",
     "        # Use ImageMagick to convert the HEIC file to JPEG\n",
     "        subprocess.run([convert_path, heic_file_path, output_file_path], check=True)\n",
-    "print(done)"
+    "print('done')"
    ]
   },
   {
