[training] evaluate identifier model (unqualified)

--- a/training/jpg-converter.ipynb
+++ b/training/jpg-converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "72d869b9-814e-43a7-a70f-05f82710482a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b8a35604-fbba-43fb-9cd7-b42b28b007ab",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
     }
    ],
    "source": [
-    "input_dir =  os.path.abspath('./data/train/pepper/')\n",
+    "input_dir =  os.path.abspath('./data/test/pepper/')\n",
     "\n",
     "convert_path = r'C:\\Program Files\\ImageMagick-7.1.1-Q16-HDRI\\magick.exe'  # Adjust this path if necessary\n",
     "\n",
