--- a/training/jpg-converter.ipynb
+++ b/training/jpg-converter.ipynb
@@ -54,7 +54,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "GepperPinger (venv)",
+   "display_name": "ganlab (venv)",
    "language": "python",
    "name": "venv"
   },
